SEO fixed for desktop

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,7 +3,7 @@
   <!-- Page navigation -->
   <nav class="header__nav">
     <!-- Logo -->
-    <a href="" class="link logo header__logo">
+    <a href="#" title="company logo link" class="link logo header__logo">
       <img
         class="logo-img header__logo-img"
         srcset="
