--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -15,7 +15,7 @@
     </svg>
   </button>
   <!-- Logo -->
-  <a href="" class="link logo mobile-menu__logo">
+  <a href="#" class="link logo mobile-menu__logo">
     <img
       class="logo-img mobile-menu__logo-img"
       srcset="
