refactors open and close modals

--- a/src/partials/modal-location.html
+++ b/src/partials/modal-location.html
@@ -2,7 +2,7 @@
 <div class="modal" data-modal="6">
   <div class="modal__container modal__container-about">
     <!-- Close button -->
-    <button class="btn modal__close-btn js-modal-close">
+    <button class="btn modal__close-btn js-modal-close" data-modal="6">
       <svg class="modal__close-icon" width="20" height="20">
         <use href="./images/icons/svg-icons.svg#icon-modal-cross"></use>
       </svg>
