--- a/src/partials/modal-buy-now.html
+++ b/src/partials/modal-buy-now.html
@@ -3,7 +3,7 @@
 <div class="modal" data-modal="1">
   <div class="modal__container modal__container-buy-now">
     <!-- Close button -->
-    <button class="btn modal__close-btn js-modal-close">
+    <button class="btn modal__close-btn js-modal-close" data-modal="1">
       <svg class="modal__close-icon" width="20" height="20">
         <use href="./images/icons/svg-icons.svg#icon-modal-cross"></use>
       </svg>
