--- a/src/partials/modal-ingredients.html
+++ b/src/partials/modal-ingredients.html
@@ -4,7 +4,7 @@
 <div class="modal modal__ice-cream-green" data-modal="3">
   <div class="modal__container modal__container-ingredients">
     <!-- Close button -->
-    <button class="btn modal__close-btn js-modal-close">
+    <button class="btn modal__close-btn js-modal-close" data-modal="3">
       <svg class="modal__close-icon" width="20" height="20">
         <use href="./images/icons/svg-icons.svg#icon-modal-cross"></use>
       </svg>
@@ -146,7 +146,7 @@
 <div class="modal modal__ice-coffee-yellow" data-modal="4">
   <div class="modal__container modal__container-ingredients">
     <!-- Close button -->
-    <button class="btn modal__close-btn js-modal-close">
+    <button class="btn modal__close-btn js-modal-close" data-modal="4">
       <svg class="modal__close-icon" width="20" height="20">
         <use href="./images/icons/svg-icons.svg#icon-modal-cross"></use>
       </svg>
@@ -288,7 +288,7 @@
 <div class="modal modal__milkshake-chocolate" data-modal="5">
   <div class="modal__container modal__container-ingredients">
     <!-- Close button -->
-    <button class="btn modal__close-btn js-modal-close">
+    <button class="btn modal__close-btn js-modal-close" data-modal="5">
       <svg class="modal__close-icon" width="20" height="20">
         <use href="./images/icons/svg-icons.svg#icon-modal-cross"></use>
       </svg>
